[project]
name = "reverse-proxy"
version = "0.1.0"
description = "Reverse proxy for http requests"
readme = "README.md"
requires-python = ">=3.12, <3.13"

[dependency-groups]
main = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "pydantic-settings>=2.10.1",
    "tenacity>=8.2.0",
]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]


[tool.uv]
default-groups = ["main", "dev"]
