[project]
name = "reverse-proxy"
version = "0.1.0"
description = "Reverse proxy for http requests"
readme = "README.md"
requires-python = ">=3.12, <3.13"

[dependency-groups]
main = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "pydantic-settings>=2.10.1",
    "tenacity>=8.2.0",
]
dev = ["fastapi>=0.115.13", "mypy>=1.16.1", "ruff>=0.12.0", "uvicorn>=0.34.3"]


[tool.uv]
default-groups = ["main", "dev"]
